created a first API-endpoint buildings to fetch all building from the database

--- a/django-citydb/Dockerfile
+++ b/django-citydb/Dockerfile
@@ -19,4 +19,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 RUN python setup.py install
 
 # Set the command to run when the container starts
-CMD ["python", "vdistrict/manage.py", "runserver"]
+# CMD ["python", "vdistrict/manage.py", "runserver"]
