changed structure of django-citydb, project folder should be in vdistrict. manage.py should be located inside root folder of django-citydb

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,14 @@ services:
     build:
       context: ./django-citydb
       dockerfile: Dockerfile
-    command: python vdistrict/manage.py runserver 0.0.0.0:8000
+    command: bash -c "python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
     container_name: djangodb
     volumes:
       - ./django-citydb:/app
+    depends_on:
+      - citydb
   citydb:
     image: 3dcitydb/3dcitydb-pg
     ports:
@@ -33,7 +35,6 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
     container_name: citydb
-
   # impexp:
   #   image: 3dcitydb/3dcitydb-impexp
   #   environment:
@@ -48,22 +49,22 @@ services:
   #   volumes:
   #     - ./impexp:/app
 
-  districtgenerator:
-    build:
-      context: ./districtgenerator
-      dockerfile: Dockerfile
-    ports:
-      - "5000:5000"
-    environment:
-      CITYDB_URL: "jdbc:postgresql://citydb:5432/citydb"
-      CITYDB_USER: admin
-      CITYDB_PASS: admin
-      CITYDB_SRSNAME: urn:adv:crs:ETRS89_UTM32*DE_DHHN92_NH
-      CITYDB_SRID: 25832
-      CITYDB_IMPORT_FILE: /data/berlin-districts.gml
-    volumes:
-      - ./districtgenerator:/app
-      - ./districtgenerator/data:/data
+  # districtgenerator:
+  #   build:
+  #     context: ./districtgenerator
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "5000:5000"
+  #   environment:
+  #     CITYDB_URL: "jdbc:postgresql://citydb:5432/citydb"
+  #     CITYDB_USER: admin
+  #     CITYDB_PASS: admin
+  #     CITYDB_SRSNAME: urn:adv:crs:ETRS89_UTM32*DE_DHHN92_NH
+  #     CITYDB_SRID: 25832
+  #     CITYDB_IMPORT_FILE: /data/berlin-districts.gml
+  #   volumes:
+  #     - ./districtgenerator:/app
+  #     - ./districtgenerator/data:/data
 volumes:
   pgdata:
   cesiumData:
