--- a/frontend/3dcitydb-web-map/package.json
+++ b/frontend/3dcitydb-web-map/package.json
@@ -9,17 +9,16 @@
         "url": "https://github.com/tum-gis/3dcitydb-web-map-docker"
     },
     "dependencies": {
-        "express": "~4.16.x",
-        "compression": "1.7.3",
-        "request": "2.87.0",
-        "yargs": "12.0.1",
+        "compression": "1.7.x",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "~4.18.x",
+        "highcharts": "^11.4.3",
+        "request": "2.88.2",
         "serve-index": "1.9.1",
-        "highcharts": "11.1.0",
-        "pg": "8.11.2",
-        "dotenv": "16.3.1",
-        "body-parser": "1.20.2"
+        "yargs": "17.7.2"
     },
     "engines": {
-      "node": ">=0.10.x"
+        "node": ">=21.x.x"
     }
 }
