make app fit for production

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,31 +9,34 @@ services:
       - ./frontend/3dcitydb-web-map:/var/www/
       - ./frontend/data:/var/www/data
     container_name: frontend
-
+    networks:
+      - webcentral_default
   djangodb:
     build:
       context: ./django-citydb
       dockerfile: Dockerfile
-    command: bash -c "python manage.py runserver 0.0.0.0:8000"
+    env_file: ".env"
+    command: bash -c "uwsgi --socket :9001 --chdir=/app/vdistrict --master --processes 4 --threads 2 --module=vdistrict.wsgi:application"
     ports:
       - "8000:8000"
     container_name: djangodb
-    volumes:
-      - ./django-citydb:/app
+    # volumes:
+    #   - ./django-citydb:/app
     depends_on:
       - citydb
+      - frontend
+    networks:
+      - webcentral_default
   citydb:
     image: 3dcitydb/3dcitydb-pg
-    ports:
-      - "5001:5432"
+    # ports:
+    #   - "5001:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    env_file: ".env"
     environment:
       SRID: 25832
       SRSNAME: urn:adv:crs:ETRS89_UTM32*DE_DHHN92_NH
-      POSTGRES_DB: citydb
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
     container_name: citydb
   # impexp:
   #   image: 3dcitydb/3dcitydb-impexp
@@ -68,3 +71,8 @@ services:
 volumes:
   pgdata:
   cesiumData:
+
+
+networks:
+  webcentral_default:
+    external: true
