--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8080:8000"
     volumes:
-      - ./frontend/3dcitydb-web-map:/var/www/3dcitydb-web-map:ro
+      - ./frontend/3dcitydb-web-map:/var/www
       - ./frontend/data:/var/www/data
     container_name: frontend
 
