--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
     #   - webcentral_default
   citydb:
     image: 3dcitydb/3dcitydb-pg
-    # ports:
-    #   - "5001:5432"
+    ports:
+      - "5001:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     env_file: ".env"
