--- a/django-citydb/Dockerfile
+++ b/django-citydb/Dockerfile
@@ -1,6 +1,7 @@
 # Use an official Python runtime as the base image
 FROM python:3.10
 
+ENV PYTHONUNBUFFERED=1
 # Set the working directory in the container
 WORKDIR /app
 
@@ -17,6 +18,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Install the package
 RUN python setup.py install
+
+
 
 RUN pip install -e districtgenerator
 # Set the command to run when the container starts
