trying to fix body-parser error

--- a/frontend/3dcitydb-web-map/package.json
+++ b/frontend/3dcitydb-web-map/package.json
@@ -20,5 +20,8 @@
     },
     "engines": {
         "node": ">=21.x.x"
-    }
+    },
+    "scripts": {
+          "start": "node server.js"
+        }
 }
