--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,11 +23,20 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         location /citydb/timeseries/ {
-            proxy_pass http://djangodb:8001;
+            uwsgi_pass djangodb:9001;
+            include /etc/nginx/uwsgi_params;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        } 
+        }
+        location /districtgenerator/simulate/ {
+            uwsgi_pass djangodb:9001;
+            include /etc/nginx/uwsgi_params;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }   
     }
 }
