--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     environment:
       NODE_ENV: production
       # command: sh -c "node server.js"
-      # networks:
-      #   - webcentral_default
+    networks:
+        - webcentral_default
   djangodb:
     build:
       context: ./django-citydb
@@ -29,12 +29,12 @@ services:
     depends_on:
       - citydb
       - frontend
-    # networks:
-    #   - webcentral_default
+    networks:
+      - webcentral_default
   citydb:
     image: 3dcitydb/3dcitydb-pg
     ports:
-      - "5001:5432"
+      - "5002:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     env_file: ".env"
@@ -42,17 +42,19 @@ services:
       SRID: 25832
       SRSNAME: urn:adv:crs:ETRS89_UTM32*DE_DHHN92_NH
     container_name: citydb
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/uwsgi_conf:/etc/nginx/uwsgi_conf
-    depends_on:
-      - djangodb
-      - frontend
-    # networks:
+    networks:
+      - webcentral_default
+  # nginx:
+  #   image: nginx:latest
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  #     - ./nginx/uwsgi_conf:/etc/nginx/uwsgi_conf
+  #   depends_on:
+  #     - djangodb
+  #     - frontend
+  #   # networks:
     #   - webcentral_default
     # impexp:
     #   image: 3dcitydb/3dcitydb-impexp
@@ -89,6 +91,6 @@ volumes:
   cesiumData:
   node_modules:
 
-    # networks:
-    #   webcentral_default:
-    #     external: true
+networks:
+  webcentral_default:
+    external: true
